RTech: finalize decouple of websocket system + improvements
The WebSocket system is now fully split up. The global network module initialization is moved to DLL init so the websocket class could be used for anything. The LiveAPI system now also mostly runs in the server frame thread, the convar change callbacks still need to be latched to the server frame thread however.

--- a/r5dev/core/CMakeLists.txt
+++ b/r5dev/core/CMakeLists.txt
@@ -161,6 +161,11 @@ target_compile_definitions( ${PROJECT_NAME} PRIVATE
 
 endif()
 
+target_include_directories( ${PROJECT_NAME} PRIVATE
+	"${THIRDPARTY_SOURCE_DIR}/dirtysdk/include/"
+	"${THIRDPARTY_SOURCE_DIR}/ea/"
+)
+
 target_link_options( ${PROJECT_NAME} PRIVATE
     "/STACK:8000000" # Match game executable stack reserve size
 
