--- a/src/game/CMakeLists.txt
+++ b/src/game/CMakeLists.txt
@@ -175,6 +175,7 @@ endif()
 target_include_directories( ${PROJECT_NAME} PRIVATE
     "${ENGINE_SOURCE_DIR}/tier0/"
     "${ENGINE_SOURCE_DIR}/tier1/"
+    "${THIRDPARTY_SOURCE_DIR}/mbedtls/include"
 )
 
 endmacro()
