--- a/r5dev/tier1/CMakeLists.txt
+++ b/r5dev/tier1/CMakeLists.txt
@@ -22,6 +22,7 @@ add_sources( SOURCE_GROUP "Utility"
 
 add_sources( SOURCE_GROUP "Private"
     "cmd.cpp"
+    "commandbuffer.cpp"
     "convar.cpp"
     "cvar.cpp"
     "interface.cpp"
