--- a/r5dev/tier1/CMakeLists.txt
+++ b/r5dev/tier1/CMakeLists.txt
@@ -20,6 +20,8 @@ add_sources( SOURCE_GROUP "Utility"
     "characterset.cpp"
     "mempool.cpp"
     "memstack.cpp"
+    "exprevaluator.cpp"
+    "keyvalues.cpp"
 )
 
 add_sources( SOURCE_GROUP "Private"
@@ -28,6 +30,10 @@ add_sources( SOURCE_GROUP "Private"
     "convar.cpp"
     "cvar.cpp"
     "interface.cpp"
+    "keyvalues_iface.cpp"
+    "kvleaktrace.h"
+    "kverrorstack.h"
+    "kvtokenreader.h"
 )
 
 file( GLOB TIER1_PUBLIC_HEADERS
