--- a/r5dev/core/CMakeLists.txt
+++ b/r5dev/core/CMakeLists.txt
@@ -58,6 +58,7 @@ target_link_libraries( ${PROJECT_NAME} PRIVATE
     "vphysics"
 
     "SigCache_Pb"
+    "LiveAPI_Pb"
     "SV_RCon_Pb"
     "CL_RCon_Pb"
 
