--- a/src/game/CMakeLists.txt
+++ b/src/game/CMakeLists.txt
@@ -7,32 +7,56 @@ start_sources()
 
 if( ${PROJECT_NAME} STREQUAL "game_shared_static" )
 
-add_sources( SOURCE_GROUP "Shared"
+add_sources( SOURCE_GROUP "AI"
     "shared/ai_utility_shared.cpp"
     "shared/ai_utility_shared.h"
-    "shared/animation.cpp"
-    "shared/animation.h"
-    "shared/collisionproperty.cpp"
-    "shared/collisionproperty.h"
+)
+
+add_sources( SOURCE_GROUP "Entity"
     "shared/ehandle.h"
     "shared/entitylist_base.cpp"
     "shared/entitylist_base.h"
-    "shared/imovehelper.h"
-    "shared/playernet_vars.h"
+)
+
+add_sources( SOURCE_GROUP "Prediction"
     "shared/predictioncopy.h"
-    "shared/shared_classnames.h"
-    "shared/shareddefs.h"
-    "shared/takedamageinfo.h"
+)
+
+add_sources( SOURCE_GROUP "Animation"
+    "shared/animation.cpp"
+    "shared/animation.h"
+)
+
+add_sources( SOURCE_GROUP "Collision"
+    "shared/collisionproperty.cpp"
+    "shared/collisionproperty.h"
+)
+
+add_sources( SOURCE_GROUP "Network"
+    "shared/playernet_vars.h"
     "shared/usercmd.cpp"
     "shared/usercmd.h"
     "shared/usermessages.h"
+)
+
+add_sources( SOURCE_GROUP "Utility"
+    "shared/imovehelper.h"
     "shared/util_shared.cpp"
     "shared/util_shared.h"
+)
+
+add_sources( SOURCE_GROUP "Shared"
+    "shared/shared_classnames.h"
+    "shared/shareddefs.h"
+    "shared/takedamageinfo.h"
+)
+
+add_sources( SOURCE_GROUP "Script"
     "shared/vscript_shared.cpp"
     "shared/vscript_shared.h"
 )
 
-add_sources( SOURCE_GROUP "Shared/Weapon"
+add_sources( SOURCE_GROUP "Weapon"
     "shared/r1/weapon_bolt.cpp"
     "shared/r1/weapon_bolt.h"
 )
@@ -116,22 +140,37 @@ endif()
 
 if( ${PROJECT_NAME} STREQUAL "client_static" )
 
-add_sources( SOURCE_GROUP "Client"
+add_sources( SOURCE_GROUP "Entity"
     "client/c_baseentity.cpp"
     "client/c_baseentity.h"
-    "client/c_baseplayer.h"
     "client/cliententitylist.h"
-    "client/enginesprite.h"
-    "client/hud.h"
+)
+
+add_sources( SOURCE_GROUP "Player"
+    "client/c_baseplayer.h"
+)
+
+add_sources( SOURCE_GROUP "Input"
     "client/input.cpp"
     "client/input.h"
-    "client/movehelper_client.cpp"
-    "client/movehelper_client.h"
+)
+
+add_sources( SOURCE_GROUP "Rendering"
+    "client/enginesprite.h"
+    "client/hud.h"
     "client/spritemodel.cpp"
-    "client/util_client.cpp"
-    "client/util_client.h"
     "client/viewrender.cpp"
     "client/viewrender.h"
+)
+
+add_sources( SOURCE_GROUP "Utility"
+    "client/movehelper_client.cpp"
+    "client/movehelper_client.h"
+    "client/util_client.cpp"
+    "client/util_client.h"
+)
+
+add_sources( SOURCE_GROUP "Script"
     "client/vscript_client.cpp"
     "client/vscript_client.h"
 )
