Launcher: light overhaul and use KeyValues class
Reworked some of the code to make globals static and used KeyValues class to parse VDF files instead.

--- a/src/sdklauncher/CMakeLists.txt
+++ b/src/sdklauncher/CMakeLists.txt
@@ -38,6 +38,9 @@ target_link_libraries( ${PROJECT_NAME} PRIVATE
     "tier0"
     "tier1"
 
+    "filesystem_std"
+    "vstdlib"
+
     "libdetours"
     "libcppkore"
     "libspdlog"
