Resource: update configuration files
Slightly adjusted RCON configuration files, recent changes implemented RCON encryption (users can specify their own AES keys).

--- a/r5dev/resource/cfg/tools/rcon_server.cfg
+++ b/r5dev/resource/cfg/tools/rcon_server.cfg
@@ -5,3 +5,4 @@
 
 sv_rcon_password          ""                 // !! WARNING !! Keep empty to disable RCON. Only enable this if you plan on using RCON.
 sv_rcon_whitelist_address ""                 // This IP will never get disconnected or banned. Example [::FFFF:127.0.0.1]:37005 (counts for IPv4 and IPv6).
+rcon_key                  ""                 // Base64 encoded AES-128 key that will be used to encrypt rcon traffic, leave this empty for a random key that gets printed to the console.
