--- a/r5dev/resource/cfg/tools/rcon_server_dev.cfg
+++ b/r5dev/resource/cfg/tools/rcon_server_dev.cfg
@@ -11,3 +11,4 @@ sv_rcon_maxsockets        "2"                // Max number of accepted sockets b
 sv_rcon_whitelist_address ""                 // This IP will never get disconnected or banned. Example [::FFFF:127.0.0.1]:37005 (counts for IPv4 and IPv6).
 
 rcon_debug                "1"                // Show RCON debug information ( ! slower! ).
+rcon_key          "WDNWLmJYQ2ZlM0VoTid3Yg==" // Base64 encoded AES-128 key that will be used to encrypt rcon traffic, leave this empty for a random key that gets printed to the console.
