--- a/r5dev/tier2/CMakeLists.txt
+++ b/r5dev/tier2/CMakeLists.txt
@@ -4,6 +4,7 @@ add_module( "lib" "tier2" "vpc" ${FOLDER_CONTEXT} TRUE TRUE )
 start_sources()
 
 add_sources( SOURCE_GROUP "Utility"
+    "cryptutils.cpp"
     "curlutils.cpp"
     "fileutils.cpp"
     "meshutils.cpp"
@@ -22,11 +23,12 @@ add_sources( SOURCE_GROUP "Public"
 end_sources()
 
 target_include_directories( ${PROJECT_NAME} PRIVATE 
-    "${ENGINE_SOURCE_DIR}/tier0/" 
+    "${ENGINE_SOURCE_DIR}/tier0/"
     "${ENGINE_SOURCE_DIR}/tier1/"
 )
 
 target_include_directories( ${PROJECT_NAME} PRIVATE 
+    "${THIRDPARTY_SOURCE_DIR}/mbedtls/include"
     "${THIRDPARTY_SOURCE_DIR}/dirtysdk/include/"
     "${THIRDPARTY_SOURCE_DIR}/ea/"
 )
