--- a/src/tier2/CMakeLists.txt
+++ b/src/tier2/CMakeLists.txt
@@ -7,6 +7,7 @@ add_sources( SOURCE_GROUP "Utility"
     "cryptutils.cpp"
     "curlutils.cpp"
     "fileutils.cpp"
+    "jsonutils.cpp"
     "meshutils.cpp"
     "renderutils.cpp"
     "socketcreator.cpp"
