InputSystem: add reverse engineered 'InputStackSystem' class
Reverse engineered as part of reverse engineering class 'CInput' which is for a future commit. Singleton pointer has been exposed to SDK through the pointer 'g_pInputStackSystem'.

--- a/src/inputsystem/CMakeLists.txt
+++ b/src/inputsystem/CMakeLists.txt
@@ -4,11 +4,14 @@ add_module( "lib" "inputsystem" "vpc" ${FOLDER_CONTEXT} TRUE TRUE )
 start_sources()
 
 add_sources( SOURCE_GROUP "Private"
+    "inputstacksystem.cpp"
+    "inputstacksystem.h"
     "inputsystem.cpp"
     "inputsystem.h"
 )
 
 add_sources( SOURCE_GROUP "Public"
+    "${ENGINE_SOURCE_DIR}/public/inputsystem/iinputstacksystem.h"
     "${ENGINE_SOURCE_DIR}/public/inputsystem/iinputsystem.h"
     "${ENGINE_SOURCE_DIR}/public/inputsystem/AnalogCode.h"
     "${ENGINE_SOURCE_DIR}/public/inputsystem/ButtonCode.h"
