Server: add AI Hull enumeration
All AI hulls of the game

--- a/src/game/CMakeLists.txt
+++ b/src/game/CMakeLists.txt
@@ -71,6 +71,7 @@ add_sources( SOURCE_GROUP "AI"
     "server/ai_networkmanager.cpp"
     "server/ai_networkmanager.h"
     "server/ai_node.h"
+    "server/ai_hull.h"
     "server/ai_utility.cpp"
     "server/ai_utility.h"
     "server/detour_impl.h"
