Recast: move implementation of alloc and assert to shared
Move the implementation as well, commit fa8d89d287752782ebdd5d9563f04fa72ef0bee9 was declaration (and some miscellaneous utility classes) only.

--- a/src/naveditor/CMakeLists.txt
+++ b/src/naveditor/CMakeLists.txt
@@ -99,6 +99,7 @@ target_precompile_headers( ${PROJECT_NAME} PRIVATE
     "${ENGINE_SOURCE_DIR}/thirdparty/recast/Pch.h"
 )
 target_link_libraries( ${PROJECT_NAME} PRIVATE
+    "navsharedcommon"
     "navdebugutils"
     "libsdl2"
     "libdetour"
