Tier0: drop SDK specific code for tools
Mathlib doesn't use some of the game-specific mutex stuff, but since our tools is now also including the mutex utilities, we have to block them out for _TOOLS as well.

--- a/src/naveditor/CMakeLists.txt
+++ b/src/naveditor/CMakeLists.txt
@@ -94,6 +94,7 @@ set_target_properties( ${PROJECT_NAME} PROPERTIES
 )
 target_compile_definitions( ${PROJECT_NAME} PRIVATE
     "WIN32"
+    "_TOOLS"
 )
 target_precompile_headers( ${PROJECT_NAME} PRIVATE
     "${ENGINE_SOURCE_DIR}/thirdparty/recast/Pch.h"
