Core: move all base integral types to dedicated header
There was always a problem dealing with core integral types accros various projects, since we typically only use IDA's pseudo definitions for rebuilding decompiled functions. It however did define almost all the integral types we use throughout the SDK. These types have been commented out and a new header has been made that defines everything we need (and we can add more in the future if this deems necessary). This new header is included with tier0/basetypes.h, so all projects have access to it and the tier0 headers will work out of the box without defining anything new.

--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -199,6 +199,7 @@ add_sources( SOURCE_GROUP "Common"
     "${ENGINE_SOURCE_DIR}/common/protocol.h"
     "${ENGINE_SOURCE_DIR}/common/pseudodefs.h"
     "${ENGINE_SOURCE_DIR}/common/qlimits.h"
+    "${ENGINE_SOURCE_DIR}/common/sdkint.h"
     "${ENGINE_SOURCE_DIR}/common/sdkdefs.h"
     "${ENGINE_SOURCE_DIR}/common/x86defs.h"
     "${ENGINE_SOURCE_DIR}/common/xbox/xboxstubs.h"
