Recast: tilemesh editor refactor
Move common code to Editor_Common and fix solomesh. Solomesh is useful for debugging recast as it allows for generating everything in 1 tile. Also did numerous fixes for the tilecache code, though this is still broken and won't be really used for the r5sdk project, but its nice to have for a potential project outside r5sdk that uses the xyz coordination system, which avoids having to run the navmesh through a conversion pass in runtime.

--- a/src/naveditor/CMakeLists.txt
+++ b/src/naveditor/CMakeLists.txt
@@ -4,11 +4,15 @@ add_module( "exe" "recast" "" ${FOLDER_CONTEXT} TRUE TRUE )
 start_sources()
 
 add_sources( SOURCE_GROUP "Builder"
+    "Editor_Common.cpp"
+    "Editor_SoloMesh.cpp"
     "Editor_TileMesh.cpp"
     "InputGeom.cpp"
 )
 
 add_sources( SOURCE_GROUP "Builder/Include"
+    "Include/Editor_Common.h"
+    "Include/Editor_SoloMesh.h"
     "include/Editor_TileMesh.h"
     "include/InputGeom.h"
 )
