Server: add AI task debug code
Reimplement CAI_BaseNPC::TaskFail.

--- a/src/game/CMakeLists.txt
+++ b/src/game/CMakeLists.txt
@@ -82,6 +82,7 @@ add_sources( SOURCE_GROUP "AI"
     "server/ai_node.h"
     "server/ai_utility.cpp"
     "server/ai_utility.h"
+    "server/ai_task.cpp"
     "server/ai_task.h"
     "server/ai_schedule.cpp"
     "server/ai_schedule.h"
