Client: add ALC per-optic scalar helper functions and cvars

--- a/src/game/CMakeLists.txt
+++ b/src/game/CMakeLists.txt
@@ -201,6 +201,8 @@ add_sources( SOURCE_GROUP "Input"
     "client/in_main.cpp"
     "client/input.cpp"
     "client/input.h"
+    "client/gamepad.cpp"
+    "client/gamepad.h"
     "client/kbutton.h"
 )
 
