Game: rename header file for consistency
C_Player is not a base class.

--- a/src/game/CMakeLists.txt
+++ b/src/game/CMakeLists.txt
@@ -213,7 +213,7 @@ add_sources( SOURCE_GROUP "Entity"
 )
 
 add_sources( SOURCE_GROUP "Player"
-    "client/c_baseplayer.h"
+    "client/c_player.h"
     "client/c_playerlocaldata.h"
 )
 
